SOS-1882 fix tag misalignment

--- a/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
+++ b/themes/so-strata-theme/docroot/_diffs/css/color_schemes/normal/normal.css
@@ -807,6 +807,10 @@ div#navigation {
 	@include input-field-focus;
 }
 
+.autocomplete-content .toolbar {
+	position: relative;
+}
+
 /* ---------- Portlets ---------- */
 
 .portlet {
